<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StrażakOSM</string>
    <string name="action_settings">Ustawienia</string>
    <string name="add_button">Dodaj</string>
    <string name="add_with_location_button">Dodaj z podaniem położenia</string>
    <string name="errorGpsDisabled">Wyłączony GPS</string>
    <string name="queryGpsDisabled">GPS jest wymagany do działania aplikacji</string>
    <string name="errorNoInternet">Wyłączony internet</string>
    <string name="queryNoInternet">Brak połączenia z internetem - praca w trybie offline</string>
    <string name="queryNoUpload">Obecnie nie można wysłać danych</string>
    <string name="systemSettings">Ustawienia systemu</string>
    <string name="quit">Wyjście</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">OK</string>
    <string name="next">Dalej</string>
    <string name="errorStorageRO">Dysk tylko do odczytu</string>
    <string name="errorStorageUnavailable">Brak miejsca na dysku</string>
    <string name="statusNoGPS">StrażakOSM. GPS wyłączony</string>
    <string name="statusStartedGPS">StrażakOSM. GPS uruchomiony</string>
    <string name="statusStoppedGPS">StrażakOSM. GPS zatrzymany</string>
    <string name="statusFixGPS">StrażakOSM. Ustalono pozycję GPS</string>
    <string name="waitForFixGPS">Poczekaj na ustalenie pozycji GPS</string>
	<string name="FolderCreationFailed">Nie mogę utworzyć katalogu</string>
	<string name="errorFileOpen">Błąd pliku</string>
	<string name="upload">Wyślij</string>
	<string name="uploadDialog">Czy na pewno chcesz wysłać pliki na serwer?</string>
	<string name="yes">Tak</string>
	<string name="no">Nie</string>
	<string name="changeview">Zmień widok</string>
	<string name="info">Informacje</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="ref_number">Numer ref.:</string>
	<string name="dry">Suchy hydrant</string>
	<string name="other">Inny</string>
	<string name="hydrant">Hydrant</string>
	<string name="input_phone">Twój nr tel lub e-mail </string>
	<string name="input_size">Wymiar </string>
	<string name="author">Projekt, wersja beta: Adam Jordanek (<a href ="mailto:dotevo@gmail.com">dotevo@gmail.com</a>)\nWersja finalna: Abakus Systemy Teleinformatyczne Sp. z o.o.\nLicencja GPL</string>
	<string name="mail"><a href ="http://www.abakus.net.pl">www.abakus.net.pl</a>\n<a href ="mailto:info@abakus.net.pl">info@abakus.net.pl</a></string>
	<string name="mail_land"><a href ="http://www.abakus.net.pl">www.abakus.net.pl</a>  <a href ="mailto:info@abakus.net.pl">info@abakus.net.pl</a></string>
	<string name="logo">Logo</string>
	<string name="send_warning">Pamiętaj, aby po przesłaniu danych na serwer firmy Abakus potwierdzić ich autentyczność drogą e-mail lub telefonicznie. Tylko zweryfikowane dane będą dodawane do bazy danych projektu OSM</string>
	<string name="warning">Uwaga</string>
	<string name="error">Błąd</string>
	<string name="pick_place">Wybierz miejsce</string>
	<string name="road_a">A</string>
	<string name="road_s">S</string>
	<string name="road_dk">DK</string>
	<string name="road_dw">DW</string>
	<string name="road_other">INNE</string>
	<string name="chainage">Słupek kilometrowy</string>
	<string name="layers">Warstwy</string>
	<string name="icon">Ikona</string>
	<string name="showmap">Mapa OSM</string>
</resources>