<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewSwitcher1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inAnimation="@android:anim/slide_in_left"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/pillar_80"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/slup_80" />

            <ImageButton
                android:id="@+id/pillar_100"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/slup_100" />

            <ImageButton
                android:id="@+id/pillar_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/slup_inny" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/underground_80"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/ziem_80" />

            <ImageButton
                android:id="@+id/underground_100"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/ziem_100" />

            <ImageButton
                android:id="@+id/underground_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/ziem_inna" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/wall_80"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/sciana_80" />

            <ImageButton
                android:id="@+id/wall_100"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/sciana_100" />

            <ImageButton
                android:id="@+id/wall_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/sciana_inna" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/wpoint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hydrant"
                android:src="@drawable/pc" />

            <Button
                android:id="@+id/pond"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dry" />

            <Button
                android:id="@+id/other"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref_number"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/hydrant_ref"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/hydrant_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_button" />

            <Button
                android:id="@+id/hydrant_add_wp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_with_location_button" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/ref_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_button"
            android:layout_marginTop="37dp"
            android:text="@string/road_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ref_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/add_button"
            android:layout_alignTop="@+id/ref_label"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/ref_label"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ref_label"
            android:minHeight="100dp"
            android:minWidth="120dip"
            android:text="@string/minus"
            android:textSize="@dimen/Big" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/distance_edit"
            android:layout_below="@+id/distance_edit"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/ref_label"
            android:minHeight="100dp"
            android:text="@string/add_button" />

        <EditText
            android:id="@+id/distance_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/minus_button"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/minus_button"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/distance_edit"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/minus_button"
            android:minHeight="100dp"
            android:minWidth="120dip"
            android:text="@string/plus"
            android:textSize="@dimen/Big" />

        <TextView
            android:id="@+id/pk_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/distance_edit"
            android:layout_alignParentLeft="true"
            android:text="@string/distance"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</ViewSwitcher>